# streamhub

./: .dockerignore  .gitignore  Cargo.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  extractors.rs  initializer.rs  log_format.rs  main.rs  routes.rs  state.rs
crates/api/src/handlers/: auth.rs  chat.rs  chat_moderation.rs  drain.rs  health.rs  mediamtx_auth.rs  metrics.rs  mod.rs  publish.rs  recording.rs  streams.rs  thumbnail.rs  transcoder_webhook.rs  ws.rs
crates/api/src/handlers/admin/: dashboard.rs  mod.rs
crates/api/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs
crates/api/src/routes/: auth.rs  health.rs  hooks.rs  mod.rs  streams.rs
crates/api/src/tasks/: health_check.rs  mod.rs  redis_subscriber.rs  viewer_count.rs
crates/api/src/tests/: admin_test.rs  auth_test.rs  hooks_test.rs  mod.rs  streams_test.rs  thumbnail_test.rs
crates/api/src/ws/: manager.rs  mod.rs  types.rs
crates/auth/: Cargo.toml
crates/auth/src/: access_state.rs  jwt.rs  lib.rs  password.rs  token.rs
crates/bo-api/: Cargo.toml
crates/bo-api/src/: config.rs  extractors.rs  main.rs  routes.rs  state.rs
crates/bo-api/src/handlers/: auth.rs  dashboard.rs  metrics.rs  mod.rs  moderation.rs  streams.rs  users.rs
crates/bo-api/src/tests/: admin_test.rs  metrics_test.rs  mod.rs  streams_test.rs  users_test.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  state.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  recording.rs  stream.rs  stream_token.rs  user.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/hook/: Cargo.toml
crates/hook/src/: lib.rs  mediamtx_auth.rs  publish.rs  recording.rs
crates/mediamtx/: Cargo.toml
crates/mediamtx/src/: keys.rs  lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260409_000001_create_streams.rs  main.rs
crates/rate-limit/: Cargo.toml
crates/rate-limit/src/: ip.rs  lib.rs  memory.rs  middleware.rs  redis.rs
crates/repo/: Cargo.toml
crates/repo/src/: lib.rs  recording.rs  stream.rs  stream_token.rs  traits.rs  user.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: http_metrics.rs  lib.rs  log_format.rs  propagation.rs
crates/transcoder/: Cargo.toml
crates/transcoder/src/: lib.rs
deploy/: .env.example  Dockerfile.api  Dockerfile.web  docker-compose.observability.yml  docker-compose.yml  mediamtx.yml  nginx.conf  prometheus.yml  promtail.yml
deploy/app/: .env.example  Dockerfile.api  docker-compose.yml
deploy/bo/: .env.example  Dockerfile.bo-api  docker-compose.yml
deploy/gke/: README.md
deploy/gke/base/: kustomization.yaml
deploy/gke/base/api/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/gke/base/bo-api/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/gke/base/eso/: clustersecretstore.yaml  externalsecret-api.yaml  externalsecret-bo-api.yaml  kustomization.yaml
deploy/gke/base/gateway/: backendpolicy-cloud-armor.yaml  gateway.yaml  healthcheckpolicy.yaml  httproute-api.yaml  httproute-bo-api.yaml  httproute-http-redirect.yaml  httproute-web.yaml  kustomization.yaml
deploy/gke/base/namespaces/: kustomization.yaml  namespace-observability.yaml  namespace-streamhub-prod.yaml  namespace-streamhub-staging.yaml
deploy/gke/base/networkpolicy/: allow-dns.yaml  api.yaml  bo-api.yaml  default-deny.yaml  kustomization.yaml  web.yaml
deploy/gke/base/serviceaccount/: README.md
deploy/gke/base/web/: deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/gke/prod/: kustomization.yaml
deploy/gke/prod/patches/: api-config.yaml  api-sa.yaml  bo-api-config.yaml  externalsecret-api.yaml  externalsecret-bo-api.yaml
deploy/gke/scripts/: deploy.sh  diff.sh  rollback.sh
deploy/gke/staging/: kustomization.yaml
deploy/gke/staging/patches/: api-config.yaml  backendpolicy-api-armor.yaml  backendpolicy-bo-api-armor.yaml  backendpolicy-web-armor.yaml  bo-api-config.yaml  bo-api-sa.yaml  clustersecretstore.yaml  externalsecret-api.yaml  externalsecret-bo-api.yaml  gateway.yaml  hpa-api.yaml  hpa-bo-api.yaml  hpa-web.yaml  httproute-api.yaml  httproute-bo-api.yaml  httproute-http-redirect.yaml  httproute-web.yaml
deploy/infra/: docker-compose.yml  nginx.conf
deploy/media/: Dockerfile.mediamtx  docker-compose.yml  entrypoint.sh  mediamtx.yml
deploy/observability/: .env.example  alertmanager.yml  docker-compose.yml  prometheus.yml  promtail.yml
deploy/observability/grafana/dashboards/: api-overview.json  bo-api-overview.json
deploy/observability/rules/: streamhub.yml
deploy/services/: .env.example  Dockerfile.mediamtx  Dockerfile.web  docker-compose.yml  nginx.conf
deploy/web/: Dockerfile.web  docker-compose.yml  nginx.conf
docs/: api.md  architecture.md  deploy.md
docs/spec/: SPEC-001-e2e-live-streaming.md  SPEC-002-auth-user-management.md  SPEC-003-recording-local.md  SPEC-005-full-containerization.md  SPEC-006-vod-playback.md  SPEC-007-uow-repo-refactor.md  SPEC-008-api-restructure.md  SPEC-009-gcs-upload.md  SPEC-010-transcoder-api.md  SPEC-011-gce-deployment.md  SPEC-011a-gke-bootstrap-app-workloads.md  SPEC-012-observability.md  SPEC-013-github-ci.md  SPEC-034-docs-align-upload-bytes.md  SPEC-035-bo-api-observability.md  SPEC-036-trace-propagation.md
infra/terraform/: README.md
infra/terraform/envs/prod/: iam.tf  main.tf  terraform.tfvars.example  variables.tf
infra/terraform/envs/staging/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/certs/: main.tf  outputs.tf  variables.tf
web/admin/: index.html
web/broadcaster/: index.html
web/viewer/: index.html
(+20 files in other folders)
