[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/auth",
    "crates/common",
    "crates/entity",
    "crates/migration",
    "crates/repo",
    "crates/storage",
    "crates/stream",
    "crates/transcoder",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# SeaORM
sea-orm = { version = "2.0.0-rc.37", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "schema-sync",
    "entity-registry"
] }
sea-orm-migration = { version = "2.0.0-rc.37", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
cfgloader_rs = "1.0"

# Internal crates
repo = { path = "crates/repo" }
common = { path = "crates/common" }
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }
auth = { path = "crates/auth" }
stream = { path = "crates/stream" }
storage = { path = "crates/storage" }
transcoder = { path = "crates/transcoder" }
