[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/auth",
    "crates/cache",
    "crates/common",
    "crates/entity",
    "crates/mediamtx",
    "crates/migration",
    "crates/repo",
    "crates/storage",
    "crates/transcoder",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# SeaORM
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "schema-sync",
    "entity-registry"
] }
sea-orm-migration = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }

# Web framework
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
sha2 = "0.11"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic", "grpc-tonic"] }
tracing-opentelemetry = "0.32"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
cfgloader_rs = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
deadpool-redis = "0.23"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "hickory-dns"] }

# Internal crates
repo = { path = "crates/repo" }
common = { path = "crates/common" }
cache = { path = "crates/cache" }
mediamtx = { path = "crates/mediamtx" }
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }
auth = { path = "crates/auth" }
storage = { path = "crates/storage" }
transcoder = { path = "crates/transcoder" }
