[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
