[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
cache = { workspace = true }
mediamtx = { workspace = true }
entity = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["macros", "rt"] }
