[package]
name = "bo-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "bo-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
cfgloader_rs = { workspace = true }
error = { workspace = true }
cache = { workspace = true }
mediamtx = { workspace = true }
entity = { workspace = true }
repo = { workspace = true }
auth = { workspace = true }
deadpool-redis = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
