[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
sea-orm = { workspace = true }
repo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
cfgloader_rs = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
storage = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
