[package]
name = "streamhub-hook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
streamhub-common = { workspace = true }
streamhub-entity = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
