[package]
name = "hook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
common = { workspace = true }
entity = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
