[package]
name = "hook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
common = { workspace = true }
entity = { workspace = true }
repo = { workspace = true }
auth = { workspace = true }
transcoder = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
serde_json = { workspace = true }
