[package]
name = "mediamtx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
cache = { path = "../cache" }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
