[package]
name = "streamhub-migration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
streamhub-entity = { workspace = true }
tokio = { workspace = true }
