[package]
name = "rate-limit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
axum = { workspace = true }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
