[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
object_store = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
